// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown open 1`] = `
<DropdownContainer
  placeholder="Default Dropdown"
>
  <Dropdown
    open={true}
    placeholder="Default Dropdown"
    setOpen={[Function]}
    setValue={[Function]}
  >
    <csx__DropdownWrapper
      onClick={[Function]}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "csx__DropdownWrapper-q2vx2b-3",
              "isStatic": false,
              "lastClassName": "kqleMk",
              "rules": Array [
                "border:1px solid #aaa;border-radius:3px;cursor:pointer;",
              ],
            },
            "displayName": "csx__DropdownWrapper",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "csx__DropdownWrapper-q2vx2b-3",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
      >
        <div
          className="csx__DropdownWrapper-q2vx2b-3 kqleMk"
          onClick={[Function]}
        >
          <csx__DropdownPlaceholder>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "csx__DropdownPlaceholder-q2vx2b-0",
                    "isStatic": false,
                    "lastClassName": "kMfNMu",
                    "rules": Array [
                      "padding:0.25em 0.5em;display:flex;justify-content:space-between;flex-direction:row;align-items:center;",
                      [Function],
                      ";svg{fill:#aaa;}",
                    ],
                  },
                  "displayName": "csx__DropdownPlaceholder",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "csx__DropdownPlaceholder-q2vx2b-0",
                  "target": "div",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="csx__DropdownPlaceholder-q2vx2b-0 kMfNMu"
              >
                Default Dropdown
                <Icon
                  icon="TICK"
                >
                  <csx__IconWrapper
                    focusable="false"
                    theme={
                      Object {
                        "colors": Object {
                          "black": "#333",
                        },
                      }
                    }
                    viewBox="0 0 32 32"
                  >
                    <StyledComponent
                      focusable="false"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "_foldedDefaultProps": Object {
                            "theme": Object {
                              "colors": Object {
                                "black": "#333",
                              },
                            },
                          },
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "csx__IconWrapper-sc-15pjeas-0",
                            "isStatic": false,
                            "lastClassName": "igSHhC",
                            "rules": Array [
                              "fill:",
                              [Function],
                              ";width:",
                              [Function],
                              ";height:",
                              [Function],
                              ";",
                            ],
                          },
                          "displayName": "csx__IconWrapper",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "csx__IconWrapper-sc-15pjeas-0",
                          "target": "svg",
                          "toString": [Function],
                          "usesTheme": true,
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      theme={
                        Object {
                          "colors": Object {
                            "black": "#333",
                          },
                        }
                      }
                      viewBox="0 0 32 32"
                    >
                      <svg
                        className="csx__IconWrapper-sc-15pjeas-0 igSHhC"
                        focusable="false"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M16.35,21.34L16.35,21.34l-2.83,2.83l-2.83-2.83l-6.36-6.36l2.83-2.83l6.36,6.36L24.84,7.2l2.83,2.83L16.35,21.34z"
                        />
                      </svg>
                    </StyledComponent>
                  </csx__IconWrapper>
                </Icon>
              </div>
            </StyledComponent>
          </csx__DropdownPlaceholder>
        </div>
      </StyledComponent>
    </csx__DropdownWrapper>
  </Dropdown>
</DropdownContainer>
`;

exports[`Dropdown renders component 1`] = `
<DropdownContainer
  placeholder="Default Dropdown"
>
  <Dropdown
    open={false}
    placeholder="Default Dropdown"
    setOpen={[Function]}
    setValue={[Function]}
  >
    <csx__DropdownWrapper
      onClick={[Function]}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "csx__DropdownWrapper-q2vx2b-3",
              "isStatic": false,
              "lastClassName": "kqleMk",
              "rules": Array [
                "border:1px solid #aaa;border-radius:3px;cursor:pointer;",
              ],
            },
            "displayName": "csx__DropdownWrapper",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "csx__DropdownWrapper-q2vx2b-3",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
      >
        <div
          className="csx__DropdownWrapper-q2vx2b-3 kqleMk"
          onClick={[Function]}
        >
          <csx__DropdownPlaceholder>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "csx__DropdownPlaceholder-q2vx2b-0",
                    "isStatic": false,
                    "lastClassName": "kMfNMu",
                    "rules": Array [
                      "padding:0.25em 0.5em;display:flex;justify-content:space-between;flex-direction:row;align-items:center;",
                      [Function],
                      ";svg{fill:#aaa;}",
                    ],
                  },
                  "displayName": "csx__DropdownPlaceholder",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "csx__DropdownPlaceholder-q2vx2b-0",
                  "target": "div",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="csx__DropdownPlaceholder-q2vx2b-0 kMfNMu"
              >
                Default Dropdown
                <Icon
                  icon="TICK"
                >
                  <csx__IconWrapper
                    focusable="false"
                    theme={
                      Object {
                        "colors": Object {
                          "black": "#333",
                        },
                      }
                    }
                    viewBox="0 0 32 32"
                  >
                    <StyledComponent
                      focusable="false"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "_foldedDefaultProps": Object {
                            "theme": Object {
                              "colors": Object {
                                "black": "#333",
                              },
                            },
                          },
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "csx__IconWrapper-sc-15pjeas-0",
                            "isStatic": false,
                            "lastClassName": "igSHhC",
                            "rules": Array [
                              "fill:",
                              [Function],
                              ";width:",
                              [Function],
                              ";height:",
                              [Function],
                              ";",
                            ],
                          },
                          "displayName": "csx__IconWrapper",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "csx__IconWrapper-sc-15pjeas-0",
                          "target": "svg",
                          "toString": [Function],
                          "usesTheme": true,
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      theme={
                        Object {
                          "colors": Object {
                            "black": "#333",
                          },
                        }
                      }
                      viewBox="0 0 32 32"
                    >
                      <svg
                        className="csx__IconWrapper-sc-15pjeas-0 igSHhC"
                        focusable="false"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M16.35,21.34L16.35,21.34l-2.83,2.83l-2.83-2.83l-6.36-6.36l2.83-2.83l6.36,6.36L24.84,7.2l2.83,2.83L16.35,21.34z"
                        />
                      </svg>
                    </StyledComponent>
                  </csx__IconWrapper>
                </Icon>
              </div>
            </StyledComponent>
          </csx__DropdownPlaceholder>
        </div>
      </StyledComponent>
    </csx__DropdownWrapper>
  </Dropdown>
</DropdownContainer>
`;

exports[`Dropdown renders component with options 1`] = `
<DropdownContainer
  options={
    Array [
      1,
      2,
      3,
      4,
      5,
    ]
  }
  placeholder="Default Dropdown"
>
  <Dropdown
    open={false}
    options={
      Array [
        1,
        2,
        3,
        4,
        5,
      ]
    }
    placeholder="Default Dropdown"
    setOpen={[Function]}
    setValue={[Function]}
  >
    <csx__DropdownWrapper
      onClick={[Function]}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "csx__DropdownWrapper-q2vx2b-3",
              "isStatic": false,
              "lastClassName": "kqleMk",
              "rules": Array [
                "border:1px solid #aaa;border-radius:3px;cursor:pointer;",
              ],
            },
            "displayName": "csx__DropdownWrapper",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "csx__DropdownWrapper-q2vx2b-3",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
      >
        <div
          className="csx__DropdownWrapper-q2vx2b-3 kqleMk"
          onClick={[Function]}
        >
          <csx__DropdownPlaceholder>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "csx__DropdownPlaceholder-q2vx2b-0",
                    "isStatic": false,
                    "lastClassName": "kMfNMu",
                    "rules": Array [
                      "padding:0.25em 0.5em;display:flex;justify-content:space-between;flex-direction:row;align-items:center;",
                      [Function],
                      ";svg{fill:#aaa;}",
                    ],
                  },
                  "displayName": "csx__DropdownPlaceholder",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "csx__DropdownPlaceholder-q2vx2b-0",
                  "target": "div",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="csx__DropdownPlaceholder-q2vx2b-0 kMfNMu"
              >
                Default Dropdown
                <Icon
                  icon="TICK"
                >
                  <csx__IconWrapper
                    focusable="false"
                    theme={
                      Object {
                        "colors": Object {
                          "black": "#333",
                        },
                      }
                    }
                    viewBox="0 0 32 32"
                  >
                    <StyledComponent
                      focusable="false"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "_foldedDefaultProps": Object {
                            "theme": Object {
                              "colors": Object {
                                "black": "#333",
                              },
                            },
                          },
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "csx__IconWrapper-sc-15pjeas-0",
                            "isStatic": false,
                            "lastClassName": "igSHhC",
                            "rules": Array [
                              "fill:",
                              [Function],
                              ";width:",
                              [Function],
                              ";height:",
                              [Function],
                              ";",
                            ],
                          },
                          "displayName": "csx__IconWrapper",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "csx__IconWrapper-sc-15pjeas-0",
                          "target": "svg",
                          "toString": [Function],
                          "usesTheme": true,
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      theme={
                        Object {
                          "colors": Object {
                            "black": "#333",
                          },
                        }
                      }
                      viewBox="0 0 32 32"
                    >
                      <svg
                        className="csx__IconWrapper-sc-15pjeas-0 igSHhC"
                        focusable="false"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M16.35,21.34L16.35,21.34l-2.83,2.83l-2.83-2.83l-6.36-6.36l2.83-2.83l6.36,6.36L24.84,7.2l2.83,2.83L16.35,21.34z"
                        />
                      </svg>
                    </StyledComponent>
                  </csx__IconWrapper>
                </Icon>
              </div>
            </StyledComponent>
          </csx__DropdownPlaceholder>
          <csx__DropdownOptions
            open={false}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "csx__DropdownOptions-q2vx2b-1",
                    "isStatic": false,
                    "lastClassName": "liXgLH",
                    "rules": Array [
                      [Function],
                      ";",
                    ],
                  },
                  "displayName": "csx__DropdownOptions",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "csx__DropdownOptions-q2vx2b-1",
                  "target": "div",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              open={false}
            >
              <div
                className="csx__DropdownOptions-q2vx2b-1 liXgLH"
                open={false}
              >
                <csx__DropdownOption
                  key="0"
                  onClick={[Function]}
                  selected={false}
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "csx__DropdownOption-q2vx2b-2",
                          "isStatic": false,
                          "lastClassName": "brxqMp",
                          "rules": Array [
                            "padding:0.25em 0.5em;&:hover{background-color:#eee;}&:active{background-color:#ddd;}",
                          ],
                        },
                        "displayName": "csx__DropdownOption",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "csx__DropdownOption-q2vx2b-2",
                        "target": "div",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    onClick={[Function]}
                    selected={false}
                  >
                    <div
                      className="csx__DropdownOption-q2vx2b-2 brxqMp"
                      onClick={[Function]}
                      selected={false}
                    >
                      1
                    </div>
                  </StyledComponent>
                </csx__DropdownOption>
                <csx__DropdownOption
                  key="1"
                  onClick={[Function]}
                  selected={false}
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "csx__DropdownOption-q2vx2b-2",
                          "isStatic": false,
                          "lastClassName": "brxqMp",
                          "rules": Array [
                            "padding:0.25em 0.5em;&:hover{background-color:#eee;}&:active{background-color:#ddd;}",
                          ],
                        },
                        "displayName": "csx__DropdownOption",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "csx__DropdownOption-q2vx2b-2",
                        "target": "div",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    onClick={[Function]}
                    selected={false}
                  >
                    <div
                      className="csx__DropdownOption-q2vx2b-2 brxqMp"
                      onClick={[Function]}
                      selected={false}
                    >
                      2
                    </div>
                  </StyledComponent>
                </csx__DropdownOption>
                <csx__DropdownOption
                  key="2"
                  onClick={[Function]}
                  selected={false}
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "csx__DropdownOption-q2vx2b-2",
                          "isStatic": false,
                          "lastClassName": "brxqMp",
                          "rules": Array [
                            "padding:0.25em 0.5em;&:hover{background-color:#eee;}&:active{background-color:#ddd;}",
                          ],
                        },
                        "displayName": "csx__DropdownOption",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "csx__DropdownOption-q2vx2b-2",
                        "target": "div",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    onClick={[Function]}
                    selected={false}
                  >
                    <div
                      className="csx__DropdownOption-q2vx2b-2 brxqMp"
                      onClick={[Function]}
                      selected={false}
                    >
                      3
                    </div>
                  </StyledComponent>
                </csx__DropdownOption>
                <csx__DropdownOption
                  key="3"
                  onClick={[Function]}
                  selected={false}
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "csx__DropdownOption-q2vx2b-2",
                          "isStatic": false,
                          "lastClassName": "brxqMp",
                          "rules": Array [
                            "padding:0.25em 0.5em;&:hover{background-color:#eee;}&:active{background-color:#ddd;}",
                          ],
                        },
                        "displayName": "csx__DropdownOption",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "csx__DropdownOption-q2vx2b-2",
                        "target": "div",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    onClick={[Function]}
                    selected={false}
                  >
                    <div
                      className="csx__DropdownOption-q2vx2b-2 brxqMp"
                      onClick={[Function]}
                      selected={false}
                    >
                      4
                    </div>
                  </StyledComponent>
                </csx__DropdownOption>
                <csx__DropdownOption
                  key="4"
                  onClick={[Function]}
                  selected={false}
                >
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "csx__DropdownOption-q2vx2b-2",
                          "isStatic": false,
                          "lastClassName": "brxqMp",
                          "rules": Array [
                            "padding:0.25em 0.5em;&:hover{background-color:#eee;}&:active{background-color:#ddd;}",
                          ],
                        },
                        "displayName": "csx__DropdownOption",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "csx__DropdownOption-q2vx2b-2",
                        "target": "div",
                        "toString": [Function],
                        "usesTheme": false,
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    onClick={[Function]}
                    selected={false}
                  >
                    <div
                      className="csx__DropdownOption-q2vx2b-2 brxqMp"
                      onClick={[Function]}
                      selected={false}
                    >
                      5
                    </div>
                  </StyledComponent>
                </csx__DropdownOption>
              </div>
            </StyledComponent>
          </csx__DropdownOptions>
        </div>
      </StyledComponent>
    </csx__DropdownWrapper>
  </Dropdown>
</DropdownContainer>
`;
